# Objackson

./: .gitignore  README.md  setup.cfg
.github/workflows/: continuous-integration.yml  pypi-deployment.yml  release-pypi.yml
objackson/: __init__.py  __main__.py  json_object.py  serializer.py
test/: __init__.py  test_objackson.py  test_serialize.py
