[metadata]
version = file: VERSION,
name = Objackson
author = Salvatore Giampà
author_email = sv.giampa@gmail.com
description = A JSON serializer for Python
keywords =  json, serializer, deserializer, serialization, deserialization, object
url = https://github.com/sv-giampa/Objackson
long_description = file: README.md
long_description_content_type=text/markdown,
license_files = LICENSE
license = Apache License version 2.0
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: File Formats :: JSON

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8.0
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    test
    test.*